--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,5 +1,8 @@
 name: First Workflow
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  push:
+    branches: [ master ]
 jobs:
   first-job:
     runs-on: ubuntu-latest
