--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,8 +1,5 @@
 name: First Workflow
-on:
-  workflow_dispatch:
-  push:
-    branches: [ master ]
+on: workflow_dispatch
 jobs:
   first-job:
     runs-on: ubuntu-latest
